fix: spacing for manage listing card

--- a/src/pages/ManageListingPage/ManageListingPage.scss
+++ b/src/pages/ManageListingPage/ManageListingPage.scss
@@ -26,6 +26,9 @@
   &__link {
     text-decoration: none;
     color: black;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
   }
 
   &__product-card {
